--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
 
       <li class="nav-item active">
-        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true"><b>Blog</b></a>
+        <a class="nav-link " href="{% url 'blog'%}" tabindex="-1" aria-disabled="true"><b>Blog</b></a>
       </li>
           <li class="nav-item active">
               <a class="nav-link " href="#" tabindex="-1" aria-disabled="true"><u><b>Registered As a Professional</b></u></a>
